apps/media-server/sonarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: sonarr
      port:
        number: 8989
  tls:
    - hosts:
        - sonarr
